# compression_CXX

./: README  comp_Depr_design.txt  comp_enc_decr_design.txt
compress_only/: CMakeLists.txt  main.cxx
compress_only/helper_dir/: CMakeLists.txt  createF.cxx
encr_compress/: data.txt  main.cxx
